# iteso-ML-class

./: LICENSE  Makefile  README.md  pyproject.toml
data/raw/: boston.csv  exam1_data.csv
docs/: mkdocs.yml
docs/docs/: index.md
iteso_class/: __init__.py  dataset.py  features.py  plots.py
iteso_class/modeling/: predict.py  train.py
mlartifacts/366212071800189555/models/m-a5f53a7e3e264aeaa1e6586cd89ecb0a/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/0/: meta.yaml
mlruns/366212071800189555/: meta.yaml
mlruns/366212071800189555/57bf44f0ef8346a2b748eba8164afcaf/: meta.yaml
mlruns/366212071800189555/57bf44f0ef8346a2b748eba8164afcaf/metrics/: accuracy
mlruns/366212071800189555/57bf44f0ef8346a2b748eba8164afcaf/outputs/m-a5f53a7e3e264aeaa1e6586cd89ecb0a/: meta.yaml
mlruns/366212071800189555/57bf44f0ef8346a2b748eba8164afcaf/tags/: mlflow.runName  mlflow.source.name
mlruns/366212071800189555/models/m-a5f53a7e3e264aeaa1e6586cd89ecb0a/: meta.yaml
mlruns/models/tracking-quickstart/: meta.yaml
mlruns/models/tracking-quickstart/version-1/: meta.yaml
notebooks/: 1.MMM_intro_gradient_descent.ipynb  1.intro_mlflow.ipynb  2.MMM_linear_regression.ipynb  3.MMM_polynomial_features.ipynb  4.MMM_logistic_regression.ipynb  6_kNN.ipynb  8_kmeans.ipynb  E1.MMM.Examen.ipynb  E2.MMM.Examen.ipynb  FinalProjectCSV.ipynb  Proyecto Aprendizaje Automatico 1.ipynb  Proyecto Aprendizaje Automatico.ipynb  T2.MMM_regularization.ipynb  T3.MMM_Pipeline_transformation.ipynb  T4.MMM_Dimensionality_Reduction_and_Visualization.ipynb  T5.MMM.Kmeans_Customer_Segmentation.ipynb
(+1 files in other folders)
